--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation "androidx.compose.foundation:foundation:1.4.3"
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
